--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "develop","feature/AddCocinero","feature/Encuentra","test"]
   pull_request:
-    branches: [ "main", "develop"]
+    branches: [ "main", "develop","feature/AddCocinero","feature/Encuentra","test"]
 
 permissions:
   contents: read
