--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,9 +2,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "main", "develop","feature/AddCocinero","feature/Encuentra","test"]
+    branches: [ "main", "develop"]
   pull_request:
-    branches: [ "main", "develop","feature/AddCocinero","feature/Encuentra","test"]
+    branches: [ "main", "develop"]
 
 permissions:
   contents: read
@@ -31,11 +31,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Execute Test
+    - name: Test with unittest
       run: |
-        cd source
-        python -m unittest -v test_MiClase.py
+        python -m unittest discover -s source -p 'test_*.py'
