--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,5 @@ jobs:
         fetch-depth: 0
     - name: Execute Test
       run: |
+        cd source
         python -m unittest -v test_MiClase.py
